--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,31 +1,47 @@
-    body {
-        margin: 0px;
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-    
-    .navbar {
-        background-color: white;
-    }
-    
-    .logo {
-        font-size: 27px;
-        font-family: 'Raleway', sans-serif;
-        ;
-    }
-    
-    .covid {
-        color: #9155A7;
-    }
-    
-    .locationFinder {
-        color: #0DB26B;
-    }
-    
-    .links {
-        font-family: 'Raleway', sans-serif;
-    }
-    
-    .login {
-        float: right;
-    }
+body {
+    margin: 0px;
+}
+
+.carousel-item,
+.img-fliud {
+    width: 100%;
+    height: 100%;
+}
+
+.navbar {
+    background-color: white;
+}
+
+.logo {
+    font-size: 27px;
+    font-family: 'Raleway', sans-serif;
+    ;
+}
+
+.fa,
+.covid {
+    color: #9155A7;
+}
+
+.locationFinder {
+    color: #0DB26B;
+}
+
+.links {
+    font-family: 'Raleway', sans-serif;
+}
+
+.container {
+    width: 100%;
+    margin: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 0px;
+}
+
+.carousel-item img {
+    width: auto;
+    height: 550px;
+    width: 100%;
+    object-fit: cover;
+}
