--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,3 +45,26 @@ body {
     width: 100%;
     object-fit: cover;
 }
+
+.greenStripe {
+    background-color: #9155A7;
+    height: 100px;
+}
+
+.steps {
+    text-align: center;
+    padding-top: 50px;
+    font-family: 'Raleway', sans-serif;
+    color: #0DB26B;
+}
+
+i.faSteps {
+    border-radius: 60px;
+    padding: 2em 2em 2em 2em;
+    background-color: #0DB26B;
+    color: white;
+}
+
+.submissionForm {
+    text-align: left;
+}
