Finished styling home page. Need to work on state pages and state dropdown for submission page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,7 +36,7 @@ body {
     margin: 0px;
     padding-left: 0px;
     padding-right: 0px;
-    padding-top: 0px;
+    padding-top: 50px;
 }
 
 .carousel-item img {
@@ -46,33 +46,287 @@ body {
     object-fit: cover;
 }
 
-.greenStripe {
-    background-color: #9155A7;
-    height: 100px;
-}
-
-.steps {
-    text-align: center;
-    padding-top: 50px;
-    font-family: 'Raleway', sans-serif;
-    color: #0DB26B;
-}
-
-i.faSteps {
-    border-radius: 60px;
-    padding: 2em 2em 2em 2em;
-    background-color: #0DB26B;
-    color: white;
-}
-
 .submissionForm {
     text-align: left;
 }
 
 h2 {
     text-align: center;
+    color: #0DB26B;
+    font-family: 'Raleway', sans-serif;
+    padding-top: 50px
 }
 
-.step {
-    padding-left: 15px;
+
+/* Container needed to position the button. Adjust the width as needed */
+
+.clearfix {
+    position: relative;
+}
+
+
+/* Make the image responsive */
+
+.container img {
+    width: 100%;
+    height: auto;
+}
+
+h4 {
+    padding-bottom: 80px;
+}
+
+.submissionForm {
+    margin: 0;
+    padding-top: 0px;
+    font-family: 'Raleway', sans-serif;
+    color: mediumaquamarine;
+}
+
+h1 {
+    font-family: 'Raleway', sans-serif;
+    color: mediumaquamarine;
+}
+
+.container .card {
+    font-family: 'Raleway', sans-serif;
+    height: 180px;
+    opacity: .8;
+    width: 300px;
+    border: none;
+    color: white;
+    width: 100%;
+    height: auto;
+    text-shadow: 1px 1px 3px #000000;
+}
+
+.container .nj {
+    background-color: mediumaquamarine;
+}
+
+.container .ny {
+    background-color: mediumseagreen;
+}
+
+.container .pa {
+    background-color: seagreen;
+}
+
+.container .njButton {
+    background-color: #5baa85;
+    border: none;
+}
+
+.container .nyButton {
+    background-color: seagreen;
+    border: none;
+}
+
+.container .paButton {
+    background-color: darkslategray;
+    border: none;
+}
+
+.container .card:hover {
+    opacity: 1;
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.cards {
+    position: absolute;
+    top: 450px;
+    z-index: 3;
+}
+
+.flatenCurve {
+    align-content: center;
+}
+
+.stripe {
+    width: 100%;
+    background-color: #9155A7;
+    opacity: .7;
+    height: 50px;
+}
+
+.fightCovid img:hover {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+    box-shadow: 2px 2px gray, 2px 2px gray, 4px 4px lightcyan;
+}
+
+h2 {
+    padding-bottom: 50px;
+}
+
+.flattenCurve img {
+    width: 100%;
+}
+
+.site-footer {
+    background-color: #26272b;
+    padding: 45px 0 20px;
+    font-size: 15px;
+    line-height: 24px;
+    color: #737373;
+}
+
+.site-footer hr {
+    border-top-color: #bbb;
+    opacity: 0.5
+}
+
+.site-footer hr.small {
+    margin: 20px 0
+}
+
+.site-footer h6 {
+    color: #fff;
+    font-size: 16px;
+    text-transform: uppercase;
+    margin-top: 5px;
+    letter-spacing: 2px
+}
+
+.site-footer a {
+    color: #737373;
+}
+
+.site-footer a:hover {
+    color: #3366cc;
+    text-decoration: none;
+}
+
+.footer-links {
+    padding-left: 0;
+    list-style: none
+}
+
+.footer-links li {
+    display: block
+}
+
+.footer-links a {
+    color: #737373
+}
+
+.footer-links a:active,
+.footer-links a:focus,
+.footer-links a:hover {
+    color: #3366cc;
+    text-decoration: none;
+}
+
+.footer-links.inline li {
+    display: inline-block
+}
+
+.site-footer .social-icons {
+    text-align: right
+}
+
+.site-footer .social-icons a {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    margin-left: 6px;
+    margin-right: 0;
+    border-radius: 100%;
+    background-color: #33353d
+}
+
+.copyright-text {
+    margin: 0
+}
+
+@media (max-width:991px) {
+    .site-footer [class^=col-] {
+        margin-bottom: 30px
+    }
+}
+
+@media (max-width:767px) {
+    .site-footer {
+        padding-bottom: 0
+    }
+    .site-footer .copyright-text,
+    .site-footer .social-icons {
+        text-align: center
+    }
+}
+
+.social-icons {
+    padding-left: 0;
+    margin-bottom: 0;
+    list-style: none
+}
+
+.social-icons li {
+    display: inline-block;
+    margin-bottom: 4px
+}
+
+.social-icons li.title {
+    margin-right: 15px;
+    text-transform: uppercase;
+    color: #96a2b2;
+    font-weight: 700;
+    font-size: 13px
+}
+
+.social-icons a {
+    background-color: #eceeef;
+    color: #818a91;
+    font-size: 16px;
+    display: inline-block;
+    line-height: 44px;
+    width: 44px;
+    height: 44px;
+    text-align: center;
+    margin-right: 8px;
+    border-radius: 100%;
+    -webkit-transition: all .2s linear;
+    -o-transition: all .2s linear;
+    transition: all .2s linear
+}
+
+.social-icons a:active,
+.social-icons a:focus,
+.social-icons a:hover {
+    color: #fff;
+    background-color: #29aafe
+}
+
+.social-icons.size-sm a {
+    line-height: 34px;
+    height: 34px;
+    width: 34px;
+    font-size: 14px
+}
+
+.social-icons a.facebook:hover {
+    background-color: #3b5998
+}
+
+.social-icons a.twitter:hover {
+    background-color: #00aced
+}
+
+.social-icons a.linkedin:hover {
+    background-color: #007bb6
+}
+
+.social-icons a.dribbble:hover {
+    background-color: #ea4c89
+}
+
+@media (max-width:767px) {
+    .social-icons li.title {
+        display: block;
+        margin-right: 0;
+        font-weight: 600
+    }
 }
