--- a/public/css/style.css
+++ b/public/css/style.css
@@ -327,3 +327,19 @@ form .submit {
 form .submit:hover {
     background-color: mediumseagreen;
 }
+
+.come-in {
+    transform: translateY(150px);
+    animation: come-in 0.8s ease forwards;
+}
+
+.come-in:nth-child(odd) {
+    animation-duration: 0.6s;
+    /* So they look staggered */
+}
+
+@keyframes come-in {
+    to {
+        transform: translateY(0);
+    }
+}
